feat(api): enable authentication for control-api