@@ -15,6 +15,7 @@
 package org.eclipse.edc.api.auth.basic;
 
 import org.eclipse.edc.api.auth.spi.AuthenticationService;
+import org.eclipse.edc.api.auth.spi.registry.ApiAuthenticationRegistry;
 import org.eclipse.edc.runtime.metamodel.annotation.Extension;
 import org.eclipse.edc.runtime.metamodel.annotation.Inject;
 import org.eclipse.edc.runtime.metamodel.annotation.Provides;
@@ -22,8 +23,6 @@ import org.eclipse.edc.runtime.metamodel.annotation.Setting;
 import org.eclipse.edc.spi.security.Vault;
 import org.eclipse.edc.spi.system.ServiceExtension;
 import org.eclipse.edc.spi.system.ServiceExtensionContext;
-
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -34,10 +33,12 @@ import static java.lang.String.format;
 @Extension(value = "Basic authentication")
 public class BasicAuthenticationExtension implements ServiceExtension {
 
-    @Setting
-    public static final String BASIC_AUTH = "edc.api.auth.basic.vault-keys";
+    @Setting(value = "Key-value object defining authentication credentials stored in the vault", type = "map", required = true)
+    static final String BASIC_AUTH = "edc.api.auth.basic.vault-keys";
     @Inject
     private Vault vault;
+    @Inject
+    private ApiAuthenticationRegistry authenticationRegistry;
 
     @Override
     public void initialize(ServiceExtensionContext context) {
@@ -46,33 +47,15 @@ public class BasicAuthenticationExtension implements ServiceExtension {
         var credentials = context.getConfig(BASIC_AUTH)
                 .getRelativeEntries().entrySet().stream()
                 .map(entry -> new ConfigCredentials(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+                .toList();
 
-        // Register basic authentication filter
         if (!credentials.isEmpty()) {
             var authService = new BasicAuthenticationService(vault, credentials, monitor);
-            context.registerService(AuthenticationService.class, authService);
+            authenticationRegistry.register("management-api", authService);
             monitor.info(format("API Authentication: basic auth configured with %s credential(s)", credentials.size()));
         } else {
             monitor.warning("API Authentication: no basic auth credentials provided");
         }
     }
 
-    static class ConfigCredentials {
-        private final String username;
-        private final String vaultKey;
-
-        ConfigCredentials(String username, String vaultKey) {
-            this.username = username;
-            this.vaultKey = vaultKey;
-        }
-
-        public String getUsername() {
-            return username;
-        }
-
-        public String getVaultKey() {
-            return vaultKey;
-        }
-    }
 }
